configuring auth and test playback on backend

--- a/backend/env.example
+++ b/backend/env.example
@@ -5,7 +5,7 @@ NODE_ENV=development
 # Spotify API Configuration
 SPOTIFY_CLIENT_ID=your_spotify_client_id_here
 SPOTIFY_CLIENT_SECRET=your_spotify_client_secret_here
-SPOTIFY_REDIRECT_URI=http://localhost:3001/auth/spotify/callback
+SPOTIFY_REDIRECT_URI=http://127.0.0.1:3001/api/auth/spotify/callback
 SPOTIFY_REFRESH_TOKEN=your_spotify_refresh_token_here
 
 # Database Configuration
