--- a/backend/package.json
+++ b/backend/package.json
@@ -8,6 +8,9 @@
     "dev": "nodemon src/server.js",
     "test": "jest",
     "test-bot": "node test-bot.js",
+    "test-playback": "node test-server-playback.js",
+    "setup-oauth": "node setup-oauth.js",
+    "debug-oauth": "node debug-oauth.js",
     "lint": "eslint src/",
     "migrate": "node src/database/migrate.js"
   },
