--- a/backend/env.example
+++ b/backend/env.example
@@ -1,6 +1,7 @@
 # Server Configuration
 PORT=3001
 NODE_ENV=development
+CORS_ALLOWED_ORIGINS=http://localhost:3000,http://localhost:3001
 
 # Spotify API Configuration
 SPOTIFY_CLIENT_ID=your_spotify_client_id_here
