adding explicit check for tracks to now use env

--- a/backend/env.example
+++ b/backend/env.example
@@ -8,6 +8,7 @@ SPOTIFY_CLIENT_ID=your_spotify_client_id_here
 SPOTIFY_CLIENT_SECRET=your_spotify_client_secret_here
 SPOTIFY_REDIRECT_URI=http://127.0.0.1:3001/api/auth/spotify/callback
 SPOTIFY_REFRESH_TOKEN=your_spotify_refresh_token_here
+SPOTIFY_ALLOW_EXPLICIT=false
 
 # Database Configuration
 DATABASE_URL=postgresql://username:password@localhost:5432/spotify_dj_db
